# zta-policy

./: README.md  apps.json  compiler.py  iptables  pan  policy.json  pyproject.toml
templates/: iptables-simple.j2  pan-simple.j2
